--- a/OnlineShop/appsettings.json
+++ b/OnlineShop/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=YEHTUTSOE\SQLEXPRESS;Database=OnlineShopdb;User Id=sa;Password=root;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  }
+
 }
