--- a/OnlineShop/appsettings.json
+++ b/OnlineShop/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YEHTUTSOE\SQLEXPRESS;Database=OnlineShopdb;User Id=sa;Password=root;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-02TH5MP\\SQLEXPRESS;Database=OnlineShopdb;User Id=sa;Password=root;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 
 }
